技 术 栈: JVM 提交说明: 对象转json时，如果两个对象循环引用可能导致栈溢出

--- a/doc/JVM/黑马程序员/二、内存结构.md
+++ b/doc/JVM/黑马程序员/二、内存结构.md
@@ -111,13 +111,58 @@ Java源代码由JVM编译成**二进制字节码指令**，这些二进制字节
    }
    ```
 
-   
-
 ##### 2.3 栈内存溢出
 
+1. 什么情况下会导致栈内存溢出
+
+   1. 栈帧过多会导致栈内存溢出
+
+      递归方法没有出口会导致栈内存溢出 `java.lang.StackOverflowError`
+
+      外部框架问题也有可能导致栈溢出
+
+      ```java
+      /**
+       * @author: lucas.zhao@kuhantech.com
+       * @date: 2021/8/22 18:07
+       * @description: 对象转json
+       * 可能出现的问题：两个对象的循环引用问题会导致栈溢出
+       * 解决方式：转换json时，可以选择性忽略转换某个json字段
+       */
+      public class JacksonStackOverFlowError {
+          public static void main(String[] args) throws JsonProcessingException {
+              Dept dept = new Dept();
+              dept.setDeptName("Market");
+      
+              Emp emp1 = new Emp("lucas", dept);
+              Emp emp2 = new Emp("natasha", dept);
+              dept.setEmpList(Arrays.asList(emp1, emp2));
+      
+              ObjectMapper mapper = new ObjectMapper();
+              System.out.println(mapper.writeValueAsString(dept));
+          }
+      }
+      
+      @Data
+      @AllArgsConstructor
+      @NoArgsConstructor
+      class Dept {
+          private String deptName;
+          private List<Emp> empList;
+      }
+      
+      @Data
+      @AllArgsConstructor
+      @NoArgsConstructor
+      class Emp {
+          private String empName;
+          private Dept dept;
+      }
+      ```
+
+   2. 栈帧过大会导致栈内存溢出
+
 ##### 2.4 线程运行诊断
-
-
 
 #### 3.本地方法栈
 
@@ -152,4 +197,3 @@ Java源代码由JVM编译成**二进制字节码指令**，这些二进制字节
 ##### 6.1 定义
 
 ##### 6.2 分配和回收原理
-
