技 术 栈: JVM 提交说明:  线程运行诊断

--- a/doc/JVM/黑马程序员/二、内存结构.md
+++ b/doc/JVM/黑马程序员/二、内存结构.md
@@ -164,6 +164,25 @@ Java源代码由JVM编译成**二进制字节码指令**，这些二进制字节
 
 ##### 2.4 线程运行诊断
 
+1. CPU负载过高
+
+   1.  用top命令定位哪个进程CPU占用过高
+
+   2. 使用ps H -eo pid,tid,%cpu 定位哪个线程CPU占用过高
+
+      ```shell
+      # 查看线程CPU占用情况
+      # H：打印进程数
+      # -eo: 想要输出的信息
+      ps H -eo pid,tid,%cpu
+      ```
+
+   3.  jstack 进程id
+
+      可以根据线程id找到有问题的线程，然后进一步定位到有问题代码的行数
+
+2. 程序运行很长时间没有结果
+
 #### 3.本地方法栈
 
 #### 4.堆
