技 术 栈: JVM 提交说明:  堆内存定义

--- a/doc/JVM/黑马程序员/二、内存结构.md
+++ b/doc/JVM/黑马程序员/二、内存结构.md
@@ -185,9 +185,20 @@ Java源代码由JVM编译成**二进制字节码指令**，这些二进制字节
 
 #### 3.本地方法栈
 
+<img src="https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.4t0gdt87xjc0.png" alt="image" style="zoom: 67%;" />
+
 #### 4.堆
 
 ##### 4.1 定义
+
+1. 概念
+
+   通过new关键字创建的对象都会使用到堆内存
+
+2. 特点
+
+   1. 它是线程共享的，堆中所有对象都需要考虑线程安全问题
+   2. 堆内存存在垃圾回收机制
 
 ##### 4.2 堆内存溢出
 
