技 术 栈: JVM 提交说明:  堆内存溢出代码示例、设置堆内存参数

--- a/doc/JVM/黑马程序员/二、内存结构.md
+++ b/doc/JVM/黑马程序员/二、内存结构.md
@@ -202,6 +202,41 @@ Java源代码由JVM编译成**二进制字节码指令**，这些二进制字节
 
 ##### 4.2 堆内存溢出
 
+1. 堆内存溢出演示代码
+
+   ```java
+   /**
+    * @author: lucas.zhao@kuhantech.com
+    * @date: 2021/8/30 7:34
+    * @description: 演示堆内存溢出   java.lang.OutOfMemoryError: Java heap space
+    */
+   public class OutOfMemoryError {
+       public static void main(String[] args) {
+           int i = 0;
+           List<String> list = new ArrayList<>();
+           String string = "hello ";
+           try {
+               while (true) {
+                   list.add(string);
+                   i ++;
+                   string += string;
+               }
+           } catch (Throwable throwable) {
+               throwable.printStackTrace();
+               System.out.println(i);
+           }
+       }
+   }
+   ```
+
+2. 设置堆内存参数
+
+   ```shell
+   -Xmx8m
+   ```
+
+   
+
 ##### 4.3 堆内存诊断
 
 #### 5.方法区
