技 术 栈: JVM 提交说明:  堆内存诊断工具

--- a/doc/JVM/黑马程序员/二、内存结构.md
+++ b/doc/JVM/黑马程序员/二、内存结构.md
@@ -235,9 +235,33 @@ Java源代码由JVM编译成**二进制字节码指令**，这些二进制字节
    -Xmx8m
    ```
 
-   
+##### 4.3 堆内存诊断工具
 
-##### 4.3 堆内存诊断
+1. jps
+
+   查看当前系统中有哪些java进程
+
+2. jmap
+
+   查看某一时刻堆内存占用情况
+
+   ```shell
+   # jps查看java进程id
+   # jmap查看java进程堆内存占用情况
+   jmap -heap process_id
+   ```
+
+3. jconsole
+
+   图形界面诊断工具，多功能监测工具，可以连续监测
+   
+4. jvisualvm
+
+   ![image](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.6ohk8goz7qw0.png)
+
+   ​	![image](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.abpu3jvn77k.png)
+
+   可以看出来一个ArrayList对象占用了200M内存空间，所以接下来排查问题重点排查该ArrayList
 
 #### 5.方法区
 
