技 术 栈: JVM 提交说明:  字符串池面试题

--- a/doc/JVM/黑马程序员/二、内存结构.md
+++ b/doc/JVM/黑马程序员/二、内存结构.md
@@ -269,11 +269,46 @@ Java源代码由JVM编译成**二进制字节码指令**，这些二进制字节
 
 ##### 5.2 组成
 
-##### 5.3 组成内存溢出
+方法区存储的是类的数据
+
+##### 5.3 方法区内存溢出
+
+1. 1.8以前会导致永久代内存溢出
+2. 1.8以后会导致元空间内存溢出
 
 ##### 5.4 运行时常量池
 
+1. 常量池
+
+   常量池实际上就是一张表，虚拟机指令根据这张常量池表找到要执行的类名、方法名、参数类型、字面量等信息
+
+2. 运行时常量池
+
+   常量池信息是放在 *.class文件中的，当该类被加载时，它的常量池信息就被放入运行时常量池信息中，并且把里面的符号地址修改为真正的内存地址
+
 ##### 5.5 StringTable特性
+
+1. 字符串池面试题
+
+   ```java
+   String s1 = "a";
+   String s2 = "b";
+   String s3 = "a" + "b";
+   String s4 = s1 + s2;
+   String s5 = "ab";
+   String s6 = s4.intern();
+   // 问
+   System.out.println(s3 == s4);
+   System.out.println(s3 == s5);
+   System.out.println(s3 == s6);
+   String x2 = new String("c") + new String("d");
+   String x1 = "cd";
+   x2.intern();
+   // 问，如果调换了【最后两行代码】的位置呢，如果是jdk1.6呢
+   System.out.println(x1 == x2);
+   ```
+
+   
 
 ##### 5.6 StringTable位置
 
