技 术 栈: JVM 提交说明:  直接内存的使用

--- a/doc/JVM/黑马程序员/二、内存结构.md
+++ b/doc/JVM/黑马程序员/二、内存结构.md
@@ -291,14 +291,23 @@ Java源代码由JVM编译成**二进制字节码指令**，这些二进制字节
 1. 字符串池面试题
 
    ```java
+   //变量是s1 s2 s3 实际存储在方法区的串池中，StringTable ["a", "b", "ab"]，串池实际上是一个hashtable（不能扩容）
    String s1 = "a";
    String s2 = "b";
    String s3 = "a" + "b";
-   String s4 = s1 + s2;
+   
+   // String s4 = s1 + s2 通过反编译得知实际上执行的是 new StringBuilder().append("a").append("b").toString() 
+   // 最后创建了一个String对象，存储在堆内存中
+   String s4 = s1 + s2; 
+   System.out.println(s3 == s4); // false
+   
+   // javac在编译期已经做了优化，结果实际上已经在编译期间确定为ab
+   String s41 = "a" + "b"; // true
    String s5 = "ab";
+   
    String s6 = s4.intern();
-   // 问
-   System.out.println(s3 == s4);
+   
+   
    System.out.println(s3 == s5);
    System.out.println(s3 == s6);
    String x2 = new String("c") + new String("d");
@@ -307,7 +316,7 @@ Java源代码由JVM编译成**二进制字节码指令**，这些二进制字节
    // 问，如果调换了【最后两行代码】的位置呢，如果是jdk1.6呢
    System.out.println(x1 == x2);
    ```
-
+   
    
 
 ##### 5.6 StringTable位置
@@ -320,4 +329,38 @@ Java源代码由JVM编译成**二进制字节码指令**，这些二进制字节
 
 ##### 6.1 定义
 
+1. 常见于NIO操作时，用于数据缓冲区
+2. 在直接内存中读写性能较高，但是直接内存的分配回收成本较高
+3. 不受JVM内存回收管理
+
+##### 6.2 直接内存原理
+
+<img src="https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.59j2uogpams0.png" alt="image" style="zoom: 67%;" />
+
+##### 6.3 演示直接内存溢出
+
+```java
+/**
+ * 演示直接内存溢出
+ */
+public class Demo1_10 {
+    static int _100Mb = 1024 * 1024 * 100;
+
+    public static void main(String[] args) {
+        List<ByteBuffer> list = new ArrayList<>();
+        int i = 0;
+        try {
+            while (true) {
+                ByteBuffer byteBuffer = ByteBuffer.allocateDirect(_100Mb);
+                list.add(byteBuffer);
+                i++;
+            }
+        } finally {
+            System.out.println(i);
+        }
+    }
+}
+```
+
 ##### 6.2 分配和回收原理
+
