--- a/doc/JVM/黑马程序员/3.垃圾回收.md
+++ b/doc/JVM/黑马程序员/3.垃圾回收.md
@@ -1,1 +1,54 @@
+### 1.如何判断对象可以回收
+
+#### 1.1 引用计数法
+
+#### 1.2可达性分析算法
+
+1. Java虚拟机中的垃圾回收器采用的是可达性分析算法来检测对象是否存活
+
+2. 它会扫描堆中的对象，看是否会沿着GC Root对象为起点的引用链找到该对象，如果在找不到则表示该对象可以被回收掉
+
+3. 哪些对象可以作为GC Root呢？
+
+   eclipse提供的[MAT](https://www.eclipse.org/mat/)工具，即Memory Analyzer可以直观的展示哪些对象可以作为GC Root
+
+#### 1.3四种引用
+
+### 2.垃圾回收算法
+
+#### 2.1标记清除
+
+#### 2.2标记整理
+
+#### 2.3复制
+
+### 3.分代垃圾回收
+
+#### 3.1相关VM参数
+
+### 4.垃圾回收器
+
+#### 4.1串行
+
+#### 4.2吞吐量优先
+
+#### 4.3响应时间优先
+
+#### 4.4G1
+
+### 5.垃圾回收调优
+
+#### 5.1 调优领域
+
+#### 5.2 确定目标
+
+#### 5.3 最快的GC
+
+#### 5.4 新生代调优
+
+#### 5.5 老年代调优
+
+#### 5.6 案例
+
+
 
