技 术 栈: 微信小程序 提交说明: 事件流的三个阶段

--- a/doc/微信小程序/【尚硅谷】网易云音乐/微信小程序.md
+++ b/doc/微信小程序/【尚硅谷】网易云音乐/微信小程序.md
@@ -1,3 +1,5 @@
+## 小程序相关
+
 ### 1.数据绑定
 
 #### 小程序数据绑定
@@ -33,3 +35,13 @@
    2. 非自身钩子函数中（定时器的回调）是同步的
 3. 数据流
    1. 单项数据流  Model  --->  View
+
+
+
+## 扩展内容
+
+### 1.事件流的三个阶段
+
+1. 捕获阶段（事件由外向内传递）
+2. 处理阶段
+3. 冒泡阶段（事件由内向外传递
