--- a/doc/微信小程序/【尚硅谷】网易云音乐/微信小程序.md
+++ b/doc/微信小程序/【尚硅谷】网易云音乐/微信小程序.md
@@ -36,7 +36,37 @@
 3. 数据流
    1. 单项数据流  Model  --->  View
 
+### 2.事件绑定
 
+##### 事件分类
+
+1. 冒泡事件
+
+   当一个组件上的事件被触发之后，该事件会向父节点传递
+
+2. 非冒泡事件
+
+   当一个组件上的事件被触发之后，该事件就终止了，不会向父节点传递
+
+##### 事件绑定
+
+1. bind绑定冒泡事件
+
+   ```html
+   <view class="greet" bindtap="handleParent">
+       <text class="" bindtap="handleChildren">{{msg}}</text>
+   </view>
+   ```
+
+2. catch绑定非冒泡事件
+
+   ```html
+   <view class="greet" catchtap="handleParent">
+       <text class="" catchtap="handleChildren">{{msg}}</text>
+   </view>
+   ```
+
+   
 
 ## 扩展内容
 
