技 术 栈: 微信小程序 提交说明: 页面跳转

--- a/doc/微信小程序/【尚硅谷】网易云音乐/微信小程序.md
+++ b/doc/微信小程序/【尚硅谷】网易云音乐/微信小程序.md
@@ -38,7 +38,7 @@
 
 ### 2.事件绑定
 
-##### 事件分类
+#### 事件分类
 
 1. 冒泡事件
 
@@ -48,7 +48,7 @@
 
    当一个组件上的事件被触发之后，该事件就终止了，不会向父节点传递
 
-##### 事件绑定
+#### 事件绑定
 
 1. bind绑定冒泡事件
 
@@ -66,7 +66,30 @@
    </view>
    ```
 
-   
+### 3.路由跳转
+
+```html
+<!-- 页面跳转 -->
+<view class="greet" catchtap="toLogs">
+    <text class="" catchtap="toLogs">{{msg}}</text>
+</view>
+```
+
+```javascript
+  /**
+   * 页面跳转
+   */
+  toLogs() {
+    wx.navigateTo({
+      url: '/pages/logs/logs',
+      success: (result)=>{
+        
+      },
+      fail: ()=>{},
+      complete: ()=>{}
+    });
+  },
+```
 
 ## 扩展内容
 
