--- a/doc/Vue/coderwhy/01.Vue.md
+++ b/doc/Vue/coderwhy/01.Vue.md
@@ -340,41 +340,191 @@ methods: {
 
 ##### 基本使用
 
-```js
-// 1.导入路由相关依赖
-import VueRouter from "vue-router"
-import Vue from "vue"
-import About from "../components/About";
-import Home from "../components/Home";
+使用步骤：
 
-//2.通过Vue.use(插件)来安装使用插件
-Vue.use(VueRouter)
+1. 导入vue-router对象
+2. 安装vue-router插件
+3. 创建vue-router对象、配置路由映射关系，导出router对象
+4. main.js文件中挂载导出的router对象
+5. 创建路由.vue组件
+6. 使用router-link配置路由映射关系
+7. 使用router-view进行组件占位
 
-//3.创建Vue.router对象
-const router = new VueRouter({
-  //3.1配置路由和组件的映射关系
-  routes:[
-    {
-      path: "/",
-      redirect: "/home" //路径的重定向
-    },
-    {
-      path: "/home",
-      component: Home
-    },
-    {
-      path: "/about",
-      component: About
+代码实现：
+
+1. router/index.js
+
+   ```javascript
+   import VueRouter from "vue-router"
+   import Vue from "vue"
+   
+   import Home from "../components/Home.vue"
+   import About from "../components/About.vue"
+   
+   Vue.use(VueRouter)
+   
+   export default new VueRouter({
+     mode: "history",
+     routes: [
+       {
+         path: "/",
+         redirect: "/home"
+       },
+       {
+         path: "/home",
+         component: Home
+       },
+       {
+         path: "/about",
+         component: About
+       }
+     ]
+   })
+   ```
+
+2. App.vue
+
+   ```html
+   <template>
+     <div id="app">
+       <router-link to="/home">首页</router-link>
+       <router-link to="/about">关于</router-link>
+        <!-- 组件占位 -->
+       <router-view/>
+     </div>
+   </template>
+   
+   <script>
+     export default {
+       name: 'App'
+     }
+   </script>
+   
+   <style>
+   
+   </style>
+   ```
+
+3. main.js
+
+   ```javascript
+   import Vue from 'vue'
+   import App from './App'
+   import router from './router'
+   
+   Vue.config.productionTip = false
+   
+   new Vue({
+     el: '#app',
+     router, // 挂载导出的router对象到vue实例上
+     render: h => h(App)
+   })
+   ```
+
+##### router-link属性说明
+
+1. to
+
+   用于指定想要跳转的路径
+
+2. tag
+
+   指定router-link想要渲染的标签
+
+3. replace
+
+   replace模式下不会留下URL的history记录，所以浏览器的前进、后退按钮没有效果
+
+4. active-class
+
+   用于指定当前激活的路由的class类名，可以在router/index.js里面进行全局修改激活的路由的类名
+
+   ```javascript
+   export default new VueRouter({
+     mode: "history",
+     routes: [
+       {
+         path: "/",
+         redirect: "/home"
+       },
+       {
+         path: "/home",
+         component: Home
+       },
+       {
+         path: "/about",
+         component: About
+       }
+     ],
+     linkActiveClass: "active" // 全局修改激活的路由的类名
+   })
+   ```
+
+##### 通过代码实现路由跳转
+
+```javascript
+<script>
+  export default {
+    name: 'App',
+    methods: {
+      homeClick() {
+        this.$router.push("/home")
+      },
+      aboutClick() {
+        this.$router.push("/about")
+      }
     }
-  ],
-  mode: "history"  //将URL模式从hash模式改为history模式
-})
-
-//4.将创建的router实例导入到vue实例中
-export default router
+  }
+</script>
 ```
 
-##### router和route的区别
+##### 动态路由实现
+
+1. 动态路由概念
+
+   在路由URL中拼接参数，即路由的URL是不固定的
+
+2. 代码实现
+
+   1. router/index.js
+
+      ```javascript
+      {
+        path: "/user/:username",
+        component: User
+      }
+      ```
+
+   2. App.vue
+
+      ```html
+      <!-- 组件的属性动态绑定变量时，可以通过v-bind实现 -->
+      <router-link :to="'/user/' + username">用户</router-link>
+      
+      data() {
+        return {
+      	username: "natasha"
+        }
+      }
+      ```
+
+   3. 在子组件中获取路由中的参数
+
+      $router是在router/index.js中导出的VueRouter对象中所有的路由映射对象
+
+      $route是当前活跃的路由对象，可以从活跃的路由对象重获取传的参数
+
+      ```html
+      <p>username: {{username}}</p>
+      
+      computed: {
+        username() {
+      	return this.$route.params.username
+        }
+      }   
+      ```
+
+##### $router和$route的区别
 
 router是创建的全局的路由实例，route是当点活跃的路由对象
 
@@ -382,13 +532,13 @@ router是创建的全局的路由实例，route是当点活跃的路由对象
 
 需求：
 
-> 当打包构建应用时，dist包下的关于业务逻辑的js代码会变得非常庞大，会影响页面的加载时间。如果我们能够将不同路由对应的组件分别打包成不同的js文件，然后当路由被访问时才加载对应的组件，这种高效的加载加载就是懒加载。
+> 当打包构建应用时，dist包下的关于业务逻辑的js代码会变得非常庞大，会影响页面的加载时间。如果我们能够将不同路由对应的组件分别打包成不同的js文件，然后当路由被访问时才加载对应的组件，这种高效的加载就是懒加载。
 
 解决问题：
 
 > 路由懒加载的主要作用是将不同的组件打包成不同的js文件，只有当该路由被访问到时，才会加载该组件。
 
-代码实现：
+**代码实现：**
 
 ```js
 const router = new VueRouter({
@@ -415,6 +565,10 @@ const router = new VueRouter({
 })
 ```
 
+**路由懒加载效果：**
+
+![image](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.112lhy88lvvk.png)
+
 ##### 嵌套路由
 
 ```js
@@ -440,9 +594,326 @@ const router = new VueRouter({
 
 ##### 参数传递
 
+参数传递主要有params方式和query方式
+
+1. params方式
+
+   1. 路由配置格式 /router/:id
+
+   2. 传递后形成的路径 /router/zhaojingchao
+
+   3. 代码实现
+
+      ```html
+      <router-link :to="'/user/' + username">用户</router-link>
+      ```
+
+2. query方式
+
+   1. 配置路由格式 /router  （也就是普通的路由配置格式）
+
+   2. 传递后形成的路径  /router?id=123
+
+   3. 代码实现
+
+      ```html
+      <router-link :to="{path: '/profile', query: {name: 'lucas', age: 19}}">档案</router-link>
+      ```
+
 ##### 导航守卫
 
-##### keep-alive
+1. 应用场景
+
+   进入一个新的页面需要将浏览器的标签页的title改掉
+
+2. 代码实现
+
+   ```javascript
+   {
+     path: "/about",
+     component: () => import("../components/About.vue"),
+     meta: {
+   	title: "关于" // 在路由对象里面需要在meta对象里配置title属性
+     }
+   }
+   
+   router.beforeEach((to, from, next) => {
+     document.title = to.matched[0].meta.title
+     next()
+   })
+   ```
+
+3. 除了全局导航守卫之外，还有路由独享守卫、组件独享守卫，详细内容可以参考官方文档
+
+##### keep-alive遇见router-view
+
+keep-alive是vue内置的组件，可以**缓存**被包含的组件的状态，避免组件被重新渲染
+
+1. 代码实现
+
+   ```html
+   <keep-alive><router-view/></keep-alive>
+   ```
+
+2. 注意事项
+
+   只有组件处于活跃状态时，也及时`router-view`被`keep-alive`标签包裹时，组件内部的`activated`和`deactivated`方法才会生效
+
+#### VueX
+
+##### 概念和应用场景
+
+1. 概念
+
+   VueX作用是集中式存储管理多个组件之间的共享变量（可以理解为一个单例模式的应用）
+
+2. 应用场景
+
+   VueX一般会存放在多个界面中共享的状态数据，例如用户的登录状态、用户基本信息、地理位置信息、购物车中的物品
+
+##### 从单界面到多界面状态的切换
+
+1. VueX安装
+
+   ```npm
+    npm install vuex --save
+   ```
+
+2. VueX使用
+
+   ```javascript
+   import Vue from "vue"
+   import VueX from "vuex"
+   
+   Vue.use(VueX)
+   
+   const store = new VueX.Store({
+     // 存放共享状态数据
+     state: {
+       counter: 999
+     },
+     // 同步操作
+     mutations: {
+   
+     },
+     // 异步操作
+     actions: {
+   
+     },
+     // 类似计算属性
+     getters: {
+   
+     },
+     // 模块划分
+     modules: {
+   
+     }
+   })
+   
+   export default store
+   ```
+
+3. VueX状态管理图例
+
+   <img src="https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.3c8ov1rd1pq0.png" alt="image" style="zoom:67%;" />
+
+##### devtools和mutations
+
+通常情况下，VueX要求我们在mutations提交的方法是同步方法，主要因为方便devtools帮助我们捕捉mutations的快照
+
+1. store/index.js
+
+   ```javascript
+   const store = new VueX.Store({
+     state: {
+       counter: 999
+     },
+     mutations: {
+       increment(state) {
+         state.counter ++
+       },
+       decrement(state) {
+         state.counter --
+       }
+     },
+     actions: {
+   
+     },
+     getters: {
+   
+     },
+     modules: {
+   
+     }
+   })
+   ```
+
+2. HelloVueX.vue
+
+   ```javascript
+   <h2>HelloVueX组件内容：{{$store.state.counter}}</h2>
+   <button @click="add">+1</button>
+   <button @click="subs">-1</button>
+   
+   methods: {
+     add() {
+   	this.$store.commit("increment")
+     },
+     subs() {
+   	this.$store.commit("decrement")
+     }      
+   }
+   ```
+
+
+##### state单一状态树的理解
+
+##### getters使用详解
+
+getters可以理解为vue实例中的计算属性
+
+```javascript
+  state: {
+    counter: 999,
+    students: [
+      {id: 100, name: "lucas", age: 18},
+      {id: 104, name: "natasha", age: 49},
+      {id: 100, name: "andre", age: 34}
+    ]
+  },
+
+  getters: {
+    // 一般getters使用方法
+    more20AgeStudent(state) {
+      return state.students.filter(student => student.age > 20)
+    },
+    
+    more20AgeStudentLength(state, getters) {
+      return getters.more20AgeStudent.length
+    },
+    // 可以传参的getters使用方法
+    moreAgeStudent(state) {
+      return function (age) {
+        return state.students.filter(student => student.age > age)
+      }
+    }
+  },
+```
+
+```html
+<p>所有学生信息：{{this.$store.state.students}}</p>
+<p>年龄大于20岁的学生信息：{{this.$store.getters.more20AgeStudent}}</p>
+<p>年龄大于20岁的学生的个数：{{this.$store.getters.more20AgeStudentLength}}</p>
+<p>年龄大于指定岁数的学生的信息：{{this.$store.getters.moreAgeStudent(age)}}</p>
+```
+
+##### mutations携带参数使用详解
+
+VueX的store状态更新的唯一方式是提交mutations
+
+1. mutations事件类型定义方式
+
+   ```javascript
+     mutations: {
+       increment(state) {
+         state.counter ++
+       },
+       decrement(state) {
+         state.counter --
+       }
+     },
+   ```
+
+2. mutations事件提交方式
+
+   ```javascript
+   methods: {
+     add() {
+   	this.$store.commit("increment")
+     },
+     subs() {
+   	this.$store.commit("decrement")
+     }      
+   }
+   ```
+
+3. mutations传参
+
+   ```javascript
+     mutations: {
+       incrementCount(state, count) {
+         state.counter += count
+       }
+     }
+   
+   methods: {
+     addCount(count) {
+   	this.$store.commit("incrementCount", count)
+     }     
+   }
+   ```
+
+
+##### mutations提交风格
+
+##### VueX数据响应式原理
+
+VueX管理的状态是响应式的前提是这些状态已经提前定义好了。这些属性会加入到响应式系统中，而响应式系统会监听这些属性的变化，一旦属性发生变化，响应式会通知界面中用到该属性的地方， 使其主动刷新
+
+```javascript
+// 反例，直接给某个对象添加属性时，这个对象的属性不是响应式的
+state.info['address'] = "洛杉矶" 
+// 正例 通过Vue提供的set方法添加属性是响应式的
+Vue.set(object, "address", "洛杉矶")
+```
+
+```javascript
+// 删除某一个对象的属性
+delete student.age // 该方式不是响应式的
+vue.delete(student, age) // 该方式是响应式的
+```
+
+##### mutations的常量类型
+
+##### actions使用详解
+
+actions对象主要放的是异步方法，方便devtools跟踪状态变化的快照信息
+
+```javascript
+// 异步修改属性
+
+  // 同步操作
+  mutations: {
+    updateInfo(state) {
+      state.counter = 9
+    }
+  },
+  // 异步操作
+  actions: {
+    /**
+     * 异步操作
+     * @param {上下文} context 可以理解为store
+     */
+    aUpdateInfo(context) {
+      setTimeout(() => {
+        context.commit("updateInfo")
+      }, 1000)
+    }
+  },	
+      
+ methods: {
+  update() {
+	this.$store.dispatch("aUpdateInfo")
+  }
+ } 
+```
 
 
 
+
+
+
+
+##### modules使用详解
+
+##### store文件夹的目录组织
