Vue：promise的链式调用

--- a/doc/Vue/coderwhy/01.Vue.md
+++ b/doc/Vue/coderwhy/01.Vue.md
@@ -960,6 +960,36 @@ promise的三种状态
 
 ##### promise的链式调用
 
+```javascript
+new Promise((resolve, reject) => {
+	setTimeout(() => {
+		resolve("aaa")
+	}, 3000)
+}).then(data => {
+	console.log("第1次异步请求成功回调：" + data)
+	return new Promise(resolve => {
+		setTimeout(() => {
+			resolve(data + " bbb")
+		},1000)
+	})
+}).then(data => {
+	console.log("第2次异步请求成功回调：" + data)
+	return new Promise((resolve, reject) => {
+		setTimeout(() => {
+			resolve(data + " ccc")
+		},1000)
+	})
+}).then(data => {
+	console.log("第3次异步请求成功回调：" + data)
+	throw new Error("抛出异常")
+}).then(data => {
+	console.log("第4次异步请求成功回调：" + data)
+}).catch(error => {
+	console.log("第4次异步请求失败回调：" + error)
+})
+console.log("同步操作")
+```
+
 ##### promise的all方法的使用
 
 #### Axios
