Vue：Axios的基本使用

--- a/doc/Vue/coderwhy/01.Vue.md
+++ b/doc/Vue/coderwhy/01.Vue.md
@@ -990,7 +990,33 @@ new Promise((resolve, reject) => {
 console.log("同步操作")
 ```
 
+![image](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.4gvv5zhe16y0.png)
+
 ##### promise的all方法的使用
+
+```javascript
+// 需求场景：这里同时有两个网络请求，当两个网络请求都成功时，再处理某一个业务
+// 提示：并不知道哪个网络请求先完成
+
+Promise.all([
+    new Promise(((resolve, reject) => {
+        setTimeout(() => {
+            console.log('result1结束')
+            resolve('result1')
+        }, 2000)
+    })),
+    new Promise(((resolve, reject) => {
+        setTimeout(() => {
+            console.log('result2结束')
+            resolve('result2')
+        }, 1000)
+    }))
+]).then(results => {
+    console.log(results)
+})
+```
+
+
 
 #### Axios
 
