Vue：Axios的基本使用

--- a/doc/Vue/coderwhy/01.Vue.md
+++ b/doc/Vue/coderwhy/01.Vue.md
@@ -1016,7 +1016,124 @@ Promise.all([
 })
 ```
 
-
-
 #### Axios
+
+##### 基本GET请求
+
+```javascript
+axios({
+  url: 'http://123.207.32.32:8000/home/multidata'
+}).then(data => {
+  console.log(data)
+})
+```
+
+##### 带有参数的GET请求
+
+```javascript
+axios({
+  url: 'http://152.136.185.210:8000/api/w6/home/data',
+  params: {
+    type: 'pop',
+    page: 1
+  }
+}).then(data => {
+  console.log(data)
+})
+```
+
+##### 并发请求
+
+```javascript
+axios.all([
+  axios({
+    url: 'http://123.207.32.32:8000/home/multidata'
+  }),
+  axios({
+    url: 'http://152.136.185.210:8000/api/w6/home/data',
+    params: {
+      type: 'pop',
+      page: 1
+    }
+  })
+]).then(data => {
+  console.log(data)
+})
+```
+
+##### 全局配置
+
+![image-20210305173655512](https://i.loli.net/2021/03/05/iKztlwXPyO3CWn5.png)
+
+##### Axios的封装
+
+```javascript
+import axios from 'axios'
+
+export function request(config){
+  //1.创建axios实例
+  let instance = axios.create({
+    baseURL: 'http://123.207.32.32:8000',
+    timeout: 5000
+  })
+  //2.发送真正的网络请求
+  return instance(config);
+}
+```
+
+```javascript
+import {request} from './network/request'
+
+request({
+  url: '/home/multidata'
+}).then(data => {
+  console.log(data)
+}).catch(err => {
+  console.log(err)
+})
+```
+
+##### Axios拦截器的使用
+
+1. 请求拦截器
+
+   1. 请求成功拦截器使用场景
+      1. 拦截掉一些不符合服务器的请求
+      2. 每次发送网络请求的时候，在界面上展示loading图标
+      3. 某些请求（登陆请求）必须在headers中携带Token，如果token失效或者没有携带Token则将页面重定向到登陆 页面
+   2.  请求失败拦截器
+
+2. 响应拦截器
+
+   1. 响应成功拦截器
+   2. 响应失败拦截器
+
+3. 代码示例
+
+   ```javascript
+   export function request(config){
+     //1.创建axios实例
+     let instance = axios.create({
+       baseURL: 'http://123.207.32.32:8000',
+       timeout: 5000
+     })
+   
+     //请求拦截器
+     instance.interceptors.request.use(config => {
+       console.log(config);
+       return config;
+     }, error => {
+       console.log("请求失败：" + error)
+     })
+   
+     //响应拦截器
+     instance.interceptors.response.use(result => {
+       return result.data;
+     }, error => {
+       console.log('响应失败' + error)
+     })
+     //2.发送真正的网络请求
+     return instance(config);
+   }
+   ```
 
