设计模式：设计模式分类

--- a/doc/设计模式/黑马-设计模式.md
+++ b/doc/设计模式/黑马-设计模式.md
@@ -12,3 +12,10 @@
 
 ### 1.4设计模式分类
 
+1. 创建型模式
+
+   创建型模式用于*描述怎样创建对象*，他的主要特点是**将对象的创建与使用分离/解耦**。GOF书中提到了单例、原型、工厂方法、抽象工厂、建造者等5中创建型模式
+
+2. 结构性模式
+
+3. 行为型模式
