--- a/doc/设计模式/黑马-设计模式.md
+++ b/doc/设计模式/黑马-设计模式.md
@@ -16,6 +16,79 @@
 
    创建型模式用于*描述怎样创建对象*，他的主要特点是**将对象的创建与使用分离/解耦**。GOF书中提到了单例、原型、工厂方法、抽象工厂、建造者等5中创建型模式
 
-2. 结构性模式
+2. 结构型模式
+
+   结构型模式用于描述**如何将类或者对象按照某种布局组成更大的结构**。GOF书中提到了代理、适配器、桥接、装饰、外观、享元、组合等7中结构型模式
 
 3. 行为型模式
+
+   行为型模式用于描述**类或者对象之间怎么相互协作共同完成单个对象无法完成的任务**，**以及怎么分配职责**
+
+## 2.UML类图
+
+#### 2.1关联关系
+
+关联关系是对象之间的一种引用关系，用于表示一类对象与另一类对象之前的联系。（老师与学生、丈夫与妻子）关联关系分为：一般关联关系、聚合关系、组合关系
+
+1. 单项关联
+
+   ![image](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.2e9rmyigf1jw.png)
+
+   在UML类图中单向关联用一个带箭头的实线表示。上图表示每个顾客都有一个地址，这通过让Customer类持有一个类型为Address的成员变量类实现。
+
+2. 双向关联
+
+   ![image](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.42tnucgg2600.png)
+
+   从上图中我们很容易看出，所谓的双向关联就是双方各自持有对方类型的成员变量。
+
+3. 自关联
+
+   ![image](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.4vlzuqylmbg0.png)
+
+   自关联在UML类图中用一个带有箭头且指向自身的线表示。上图的意思就是Node类包含类型为Node的成员变量，也就是“自己包含自己”。
+
+#### 2.2聚合关系
+
+聚合关系是关联关系的一种，是强关联关系，是整体和部分之间的关系。
+
+聚合关系也是通过成员对象来实现的，其中成员对象是整体对象的一部分，但是成员对象可以脱离整体对象而独立存在。例如，学校与老师的关系，学校包含老师，但如果学校停办了，老师依然存在。
+
+在 UML 类图中，聚合关系可以用带空心菱形的实线来表示，菱形指向整体。
+
+![image-20191229173422328](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image-20191229173422328.78005m76yhc0.png)
+
+#### 2.3组合关系
+
+组合表示类之间的整体与部分的关系，但它是一种更强烈的聚合关系。
+
+在组合关系中，整体对象可以控制部分对象的生命周期，一旦整体对象不存在，部分对象也将不存在，部分对象不能脱离整体对象而存在。例如，头和嘴的关系，没有了头，嘴也就不存在了。
+
+在 UML 类图中，组合关系用带实心菱形的实线来表示，菱形指向整体。下图所示是头和嘴的关系图：
+
+![image-20191229173455149](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image-20191229173455149.33i72tedzmq0.png)
+
+#### 2.4依赖关系
+
+依赖关系是一种使用关系，它是对象之间耦合度最弱的一种关联方式，是临时性的关联。在代码中某个类的方法通过局部变量、方法的参数、或者静态方法来访问另一个类中的方法来完成某些职责。
+
+在 UML 类图中，依赖关系使用带箭头的虚线来表示，箭头从使用类指向被依赖的类。
+
+![image-20191229173518926](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image-20191229173518926.2hpsz4re5gu.png)
+
+#### 2.5继承关系
+
+继承关系是对象之间耦合度最大的一种关系，表示一般与特殊的关系，是父类与子类之间的关系，是一种继承关系。
+
+在 UML 类图中，泛化关系用带空心三角箭头的实线来表示，箭头从子类指向父类。
+
+![image-20191229173539838](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image-20191229173539838.5ippyx93z1w0.png)
+
+#### 2.6实现关系
+
+实现关系是接口与实现类之间的关系。在这种关系中，类实现了接口，类中的操作实现了接口中所声明的所有的抽象操作。
+
+在 UML 类图中，实现关系使用带空心三角箭头的虚线来表示
+
+![image-20191229173554296](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image-20191229173554296.7i1grjdvxwc0.png)
+
