--- a/doc/设计模式/黑马-设计模式.md
+++ b/doc/设计模式/黑马-设计模式.md
@@ -92,3 +92,26 @@
 
 ![image-20191229173554296](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image-20191229173554296.7i1grjdvxwc0.png)
 
+## 3.软件设计原则
+
+在软件开发中，为了提高软件系统的可维护性、可复用性、可扩展性、灵活性。开发者要尽量根据一下6条原则来开发程序，从而提高软件的研发效率
+
+#### 3.1开闭原则
+
+**对扩展开放，对修改关闭。** 即在程序需要进行扩展的地方， 不能去修改原有的代码，实现热插拔的效果。要想实现这样的效果，我们需要用到接口和抽象类，因为抽象灵活性好，适用性广，只要抽象的合理，基本可以保证软件架构的运行，而软件中易变的细节可以抽象类的派生类中实现，当需求发生变化时，只需要重新派生一个派生类即可实现功能的扩展。
+
+【示例】搜狗输入法皮肤切换设计
+
+ 分析：用户可以根据自己的喜爱更换自己的输入法的皮肤，也可以从网上下载新的皮肤。这些皮肤有共同的特点，可以为其定义一个抽象类（AbstractSkin），而每个具体的皮肤（DefaultSpecificSkin和HeimaSpecificSkin）是其子类。用户窗体可以根据需要选择或者增加新的主题，而不需要修改原代码，所以它是满足开闭原则的。
+
+![open-close](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/open-close.3jieoqc7yww0.png)
+
+#### 3.2里氏替换原则
+
+#### 3.3依赖倒转原则
+
+#### 3.4接口隔离原则
+
+#### 3.5迪米特原则
+
+#### 3.6合成复用原则
