设计模式：依赖倒转原则

--- a/doc/设计模式/黑马-设计模式.md
+++ b/doc/设计模式/黑马-设计模式.md
@@ -112,7 +112,23 @@
 
 #### 3.3依赖倒转原则
 
+高层模块不应该依赖底层模块，两者都应该依赖其抽象；抽象不应该依赖细节，细节应该依赖其抽象。说人话就是**应该面向抽象/接口编程，而不应该面向实现编程**。这样就可以降低客户端和实现之间的耦合度。
 
+下面看一个例子来理解依赖倒转原则
+
+【例】组装电脑
+
+现要组装一台电脑，需要配件cpu，硬盘，内存条。只有这些配置都有了，计算机才能正常的运行。选择cpu有很多选择，如Intel，AMD等，硬盘可以选择希捷，西数等，内存条可以选择金士顿，海盗船等。
+
+![依赖倒转原则](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/依赖倒转原则.1covehzdbv28.png)
+
+上面代码可以看到已经组装了一台电脑，但是似乎组装的电脑的cpu只能是Intel的，内存条只能是金士顿的，硬盘只能是希捷的，这对用户肯定是不友好的，用户有了机箱肯定是想按照自己的喜好，选择自己喜欢的配件。
+
+根据依赖倒转原则进行改进：
+
+我们需要修改compute类，让computer类依赖抽象（各个组件的接口），而不应该依赖各个组件的具体实现类
+
+![依赖倒转原则改进](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/依赖倒转原则改进.67b7hszte3k0.png)
 
 #### 3.4接口隔离原则
 
