设计模式：接口隔离原则

--- a/doc/设计模式/黑马-设计模式.md
+++ b/doc/设计模式/黑马-设计模式.md
@@ -132,6 +132,24 @@
 
 #### 3.4接口隔离原则
 
+客户端不应该被迫依赖它不使用的方法；一个类对另一个类的依赖应该建立在最小的接口上
+
+![image](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.6j2wcu3kans0.png)
+
+下面看一个例子来理解接口隔离原则
+
+【例】安全门案例
+
+我们需要创建一个`黑马`品牌的安全门，该安全门具有防火、防水、防盗的功能。可以将防火，防水，防盗功能提取成一个接口，形成一套规范。类图如下：
+
+![接口隔离原则](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/接口隔离原则.tq4f9qkd2e8.png)
+
+上面的设计我们发现了它存在的问题，黑马品牌的安全门具有防盗，防水，防火的功能。现在如果我们还需要再创建一个传智品牌的安全门，而该安全门只具有防盗、防水功能呢？很显然如果实现SafetyDoor接口就违背了接口隔离原则，那么我们如何进行修改呢？看如下类图：
+
+![接口隔离原则1](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/接口隔离原则1.12osf3ws2huo.png)
+
+
+
 #### 3.5迪米特原则
 
 #### 3.6合成复用原则
