设计模式：迪特米原则

--- a/doc/设计模式/黑马-设计模式.md
+++ b/doc/设计模式/黑马-设计模式.md
@@ -148,8 +148,16 @@
 
 ![接口隔离原则1](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/接口隔离原则1.12osf3ws2huo.png)
 
-
-
 #### 3.5迪米特原则
+
+##### 概念
+
+如果两个软件实体不需要直接通信，就不应该直接发生相互调用，可以通过第三方转发该调用。其目的是降低类之间的耦合度，提高模块的独立性
+
+##### 示例
+
+明星由于全身心投入艺术，所以许多日常事务由经纪人负责处理，如和粉丝的见面会，和媒体公司的业务洽淡等。这里的经纪人是明星的朋友，而粉丝和媒体公司是陌生人，所以适合使用迪米特法则
+
+![迪米特法则](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/迪米特法则.26d0cqbggqcg.png)
 
 #### 3.6合成复用原则
