--- a/doc/设计模式/黑马-设计模式.md
+++ b/doc/设计模式/黑马-设计模式.md
@@ -181,4 +181,26 @@
 2. 对象间的耦合度低。可以在类的成员位置声明抽象。
 3. 复用的灵活性高。这种复用可以在运行时动态进行，新对象可以动态地引用与成分对象类型相同的对象。
 
-##### 示例
+## 4.创建型模式
+
+创建型模式主要关注的是如何创建对象，特点：是将对象的创建和使用解耦。这样可以降低系统的耦合度，使开发者不需要关注对象的创建细节
+
+创建型模式一共有
+
+1. 单例模式
+2. 抽象工厂模式
+3. 工厂方法模式
+4. 原型模式
+5. 建造者模式
+
+### 4.1单例模式
+
+
+
+### 4.2工厂方法模式
+
+### 4.3抽象工厂模式
+
+### 4.4原型模式
+
+### 4.5建造者模式
