设计模式：双重检查锁单例模式

--- a/doc/设计模式/黑马-设计模式.md
+++ b/doc/设计模式/黑马-设计模式.md
@@ -195,7 +195,138 @@
 
 ### 4.1单例模式
 
+#### 概念
 
+单例模式涉及到一个单一的类，该类负责创建自己的对象，同时确保只有单个对象被创建。这个类还提供了唯一的外界访问方式（可以直接访问，不需要实例化该对象）
+
+#### 单例模式结构
+
+1. 单例类
+
+   只能创建一个实例的类
+
+2. 访问类
+
+   使用该单例类
+
+#### 单例模式实现
+
+##### 懒汉式
+
+1. 普通线程安全的懒汉式
+
+   <font color="red">说明：</font> getInstance方法使用了synchronized关键字修饰，加锁的粒度太大，会导致该方法的执行效率很低。实际上只有当instance为null时，才会创建实例对象（写操作，会出现线程安全问题），但是一旦实例对象创建完成，就是以后再调用getInstance方法就是读操作，不会出现线程安全问题。因此该方法有待优化。
+
+   ```java
+   public class Singleton {
+   
+       /**
+        * 构造方法私有化
+        */
+       private Singleton() {}
+   
+       private static Singleton instance;
+   
+       public static synchronized Singleton getInstance () {
+           if(instance == null) {
+               instance = new Singleton();
+               return instance;
+           }
+           return instance;
+       }
+   }
+   ```
+
+2. 双重检查锁方式
+
+   <font color="red">说明：</font> 使用双重检查锁的方式有效地解决了单例、线程安全、性能问题。并且在instance成员变量上使用了`volatile`关键字修饰，保证了可见性和有序性问题（这里保证的有序性问题）
+
+   添加 `volatile` 关键字之后的双重检查锁模式是一种比较好的单例实现模式，能够保证在多线程的情况下线程安全也不会有性能问题。
+
+   ```java
+   public class Singleton {
+   
+       private void Singleton() {}
+   
+       private static volatile Singleton instance;
+   
+       public static Singleton getInstance() {
+           // 第一次判断，如果instance不为null，不抢占锁，直接返回对象
+           if (instance == null) {
+               synchronized (Singleton.class) {
+                   // 抢占到锁之后再次进行判断
+                   if (instance == null) {
+                       instance = new Singleton();
+                   }
+               }
+           }
+           return instance;
+       }
+   }
+   ```
+
+   
+
+##### 饿汉式
+
+1. 饿汉静态成员变量方式
+
+   <font color="red">说明：</font> instance对象是随着类的加载而创建的，如果对象足够大并且一直没有使用就会造成内存浪费的现象
+
+   ```java
+   public class Singleton {
+   
+       /**
+        * 构造方法私有化
+        */
+       private Singleton() {}
+   
+       private static Singleton instance = new Singleton();
+   
+       public static Singleton getInstance () {
+           return instance;
+       }
+   }
+   ```
+
+   ```java
+   public class Client {
+       public static void main(String[] args) {
+   
+           Singleton instance1 = Singleton.getInstance();
+           Singleton instance2 = Singleton.getInstance();
+   
+           // == 判断的是内存地址是否相等
+           System.out.println(instance1 == instance2);
+       }
+   }
+   ```
+
+2. 饿汉静态代码块方式
+
+   <font color="red">说明：</font> instance对象是随着类的加载而创建的，如果对象足够大并且一直没有使用就会造成内存浪费的现象
+
+   ```java
+   public class Singleton {
+   
+       /**
+        * 构造方法私有化
+        */
+       private Singleton() {}
+   
+       private static final Singleton instance;
+   
+       static {
+           instance = new Singleton();
+       }
+   
+       public static Singleton getInstance () {
+           return instance;
+       }
+   }
+   ```
+
+   
 
 ### 4.2工厂方法模式
 
