--- a/doc/设计模式/黑马-设计模式.md
+++ b/doc/设计模式/黑马-设计模式.md
@@ -265,7 +265,26 @@
    }
    ```
 
+3. 静态内部类方式
+
+   静态内部类单例模式中的实例是由内部类创建的，由于JVM在加载外部类过程中是不会主动加载静态内部类，只有静态内部类属性/方法被调用时才会被加载，并且初始化静态属性。
+
+   静态属性由于被`static`修饰，可以保证只被实例化一次，并且严格保证实例化顺序
+
+   ```java
+   public class Singleton {
+       private Singleton() {}
    
+       private static class SingletonHolder {
+           private static final Singleton INSTANCE = new Singleton();
+       }
+   
+       // 静态内部类只有在调用时才会被加载
+       public static Singleton getInstance() {
+           return SingletonHolder.INSTANCE;
+       }
+   }
+   ```
 
 ##### 饿汉式
 
@@ -326,7 +345,6 @@
    }
    ```
 
-   
 
 ### 4.2工厂方法模式
 
