设计模式：静态内部类单例模式优点

--- a/doc/设计模式/黑马-设计模式.md
+++ b/doc/设计模式/黑马-设计模式.md
@@ -286,6 +286,10 @@
    }
    ```
 
+   <font color="red">说明：</font> 第一次加载Singleton类时不会初始化INSTANCE变量，只有第一次调用`getInstance`方法时，JVM才会加载`SingletonHolder`内部类并且初始化`INSTANCE` 实例。
+
+   <font color="red">小结：</font> 静态内部类单例模式是一种比较优秀的单例模式，在开源项目中广泛应用。在没有加锁的方式下可以保证线程安全问题，并且没有性能影响和内存空间的浪费。
+
 ##### 饿汉式
 
 1. 饿汉静态成员变量方式
