设计模式：反序列化方式破坏单例模式

--- a/doc/设计模式/黑马-设计模式.md
+++ b/doc/设计模式/黑马-设计模式.md
@@ -349,6 +349,69 @@
    }
    ```
 
+3. 枚举类单例模式
+
+   因为枚举类实现方式简单、只会被加载一次，并且是线程安全的，所以枚举类是一种极力推荐的单例模式。
+
+   枚举类单例模式是众多单例模式中唯一一个**不会被破坏**的单例模式
+
+   枚举类单例模式是**饿汉式**的
+
+   ```java
+   public enum Singleton {
+       INSTANCE
+   }
+   ```
+
+#### 单例模式存在的问题
+
+##### 问题演示
+
+1. 破坏单例模式（创建多个单例类）
+
+   通过序列化和反射的方式可以破坏单例模式
+
+2. 序列化/反序列化方式破坏单例模式
+
+   ```java
+   public class DestructionSingletonClient {
+       public static void main(String[] args) throws Exception {
+           // writeObject2File();
+           readObjectFromFile();
+           readObjectFromFile();
+       }
+   
+       /**
+        * 向文件中写数据(序列化)
+        */
+       private static void writeObject2File() throws Exception {
+           Singleton instance = Singleton.getInstance();
+           ObjectOutputStream oos = new ObjectOutputStream(new FileOutputStream("C:\\Users\\lucas.zhao\\Desktop\\object.txt"));
+           oos.writeObject(instance);
+           oos.close();
+       }
+   
+       /**
+        * 从文件中读取数据(反序列化)
+        */
+       private static void readObjectFromFile() throws Exception{
+           ObjectInputStream ois = new ObjectInputStream(new FileInputStream("C:\\Users\\lucas.zhao\\Desktop\\object.txt"));
+           Singleton instance = (Singleton) ois.readObject();
+           System.out.println(instance);
+           ois.close();
+       }
+   }
+   ```
+
+   ```java
+   // 从控制台输出可知反序列化出了两个不同的instance对象，达到了破坏单例模式的效果
+   com.geek.pattern.singleton.demo7.Singleton@668bc3d5
+   com.geek.pattern.singleton.demo7.Singleton@3cda1055
+   ```
+
+3. 反射方式破坏单例模式
+
+##### 问题解决
 
 ### 4.2工厂方法模式
 
