设计模式：反射方式破坏单例模式

--- a/doc/设计模式/黑马-设计模式.md
+++ b/doc/设计模式/黑马-设计模式.md
@@ -411,6 +411,28 @@
 
 3. 反射方式破坏单例模式
 
+   ```java
+   public class ReflexDestroyDemo {
+       public static void main(String[] args) throws NoSuchMethodException, IllegalAccessException, InvocationTargetException, InstantiationException {
+           // 1.获取Singleton字节码对象
+           Class<Singleton> clazz = Singleton.class;
+           // 2.获取无参构造方法对象
+           Constructor<Singleton> constructor = clazz.getDeclaredConstructor();
+           // 3.取消访问检查(暴力反射)
+           constructor.setAccessible(true);
+           // 4.创建Singleton对象
+           Singleton singleton1 = constructor.newInstance();
+           Singleton singleton2 = constructor.newInstance();
+   
+           // 比较创建的对象是否是同一个对象
+           // 实际出去的结果为false，符合预期
+           System.out.println(singleton1 == singleton2);
+       }
+   }
+   ```
+
+   
+
 ##### 问题解决
 
 ### 4.2工厂方法模式
