--- a/doc/设计模式/黑马-设计模式.md
+++ b/doc/设计模式/黑马-设计模式.md
@@ -431,11 +431,104 @@
    }
    ```
 
-   
-
 ##### 问题解决
 
-### 4.2工厂方法模式
+1. 序列化方式破坏单例模式解决办法
+
+   在Singleton类中添加`readResolve()`方法，在反序列化时被反射调用，如果定义了这个方法，就返回这个方法的值，如果没有定义，则返回新new出来的对象。
+
+   ```java
+   public class Singleton implements Serializable {
+   
+       //私有构造方法
+       private Singleton() {}
+   
+       private static class SingletonHolder {
+           private static final Singleton INSTANCE = new Singleton();
+       }
+   
+       //对外提供静态方法获取该对象
+       public static Singleton getInstance() {
+           return SingletonHolder.INSTANCE;
+       }
+       
+       /**
+        * 下面是为了解决序列化反序列化破解单例模式
+        */
+       private Object readResolve() {
+           return SingletonHolder.INSTANCE;
+       }
+   }
+   ```
+
+2. 反射模式破坏单例模式解决办法
+
+   这种方式比较好理解。当通过反射方式调用构造方法进行创建创建时，直接抛异常。不运行此中操作。
+
+   ```java
+   public class Singleton {
+   
+       //私有构造方法
+       private Singleton() {
+           /*
+              反射破解单例模式需要添加的代码
+           */
+           if(instance != null) {
+               throw new RuntimeException();
+           }
+       }
+       
+       private static volatile Singleton instance;
+   
+       //对外提供静态方法获取该对象
+       public static Singleton getInstance() {
+   
+           if(instance != null) {
+               return instance;
+           }
+   
+           synchronized (Singleton.class) {
+               if(instance != null) {
+                   return instance;
+               }
+               instance = new Singleton();
+               return instance;
+           }
+       }
+   }
+   ```
+
+#### JDK源码解析-Runtime类
+
+Runtime类就是使用的单例设计模式。
+
+```java
+public class Runtime {
+    private static Runtime currentRuntime = new Runtime();
+
+    public static Runtime getRuntime() {
+        return currentRuntime;
+    }
+
+    private Runtime() {}
+}
+```
+
+### 4.2工厂模式
+
+#### 4.2.1概述
+
+需求：设计一个咖啡店点餐系统。  
+
+设计一个咖啡类（Coffee），并定义其两个子类（美式咖啡【AmericanCoffee】和拿铁咖啡【LatteCoffee】）；再设计一个咖啡店类（CoffeeStore），咖啡店具有点咖啡的功能。
+
+具体类的设计如下：
+
+![image](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.331cxn2ll900.png)
+
+
+
+
 
 ### 4.3抽象工厂模式
 
