设计模式：简答工厂模式

--- a/doc/设计模式/黑马-设计模式.md
+++ b/doc/设计模式/黑马-设计模式.md
@@ -526,12 +526,96 @@ public class Runtime {
 
 ![image](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.331cxn2ll900.png)
 
+如果我们创建对象都是通过`new 关键字`创建的，那么创建对象的类会和该对象`耦合度较高`，如果我们需要更换创建的对象，则所有new
 
+对象的地方都需要修改一遍，这显然违反了开闭原则。
 
+如果我们使用工厂生产对象，创建对象只需要和工厂交互就可以了，彻底和对象本身解耦。如果需要更换对象，直接在工厂里更换对象即可。所以工厂模式的最大优点是：**解耦**。
 
+接下里会介绍三种工厂模式：
 
-### 4.3抽象工厂模式
+1. 简单工厂模式（不属于23种经典设计模式）
+2. 工厂方法模式
+3. 抽象工厂模式
+
+#### 4.2.2 简单工厂模式
+
+简单工厂模式不是一种设计模式，更像是一种编程习惯
+
+##### 4.2.2.1 简单工程模式三大角色
+
+1. 抽象产品
+
+   定义产品规范，描述产品功能和特性
+
+2. 具体产品
+
+   实现或者继承抽象产品
+
+3. 具体工厂
+
+   提供创建产品的方法，客户端可以通过该方法获取产品
+
+##### 4.2.2.2 实现
+
+![简单工厂模式](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/简单工厂模式.34rhn52yoqk0.png)
+
+工厂类代码如下：
+
+```java
+public class SimpleCoffeeFactory {
+    public Coffee createCoffee(String type) {
+        Coffee coffee;
+        if("latte".equals(type)) {
+            coffee = new LatteCoffee();
+        }else if("american".equals(type)) {
+            coffee = new AmericanCoffee();
+        }else {
+            throw new IllegalArgumentException("参数错误");
+        }
+        coffee.addMilk();
+        coffee.addSugar();
+        return coffee;
+    }
+}
+```
+
+工厂（factory）处理创建对象的细节，一旦有了SimpleCoffeeFactory，CoffeeStore类中的orderCoffee()就变成此对象的客户，后期如果需要Coffee对象直接从工厂中获取即可。这样也就解除了和Coffee实现类的耦合，同时又产生了新的耦合，CoffeeStore对象和SimpleCoffeeFactory工厂对象的耦合，工厂对象和商品对象的耦合。
+
+后期如果再加新品种的咖啡，我们势必要需求修改SimpleCoffeeFactory的代码，违反了开闭原则。工厂类的客户端可能有很多，比如创建美团外卖等，这样只需要修改工厂类的代码，省去其他的修改操作。
+
+##### 4.2.2.3 优缺点
+
+1. 优点
+
+   封装了创建对象的过程，可以通过参数直接获取对象。把对象的创建和业务逻辑层分开，这样以后就避免了修改客户代码，如果要实现新产品直接修改工厂类，而不需要在原代码中修改，这样就降低了客户代码修改的可能性，更加容易扩展。
+
+2. 缺点
+
+   增加新产品时还是需要修改工厂类的代码，违背了“开闭原则”。
+
+##### 4.2.2.4 扩展
+
+静态工厂，即将工厂中的创建对象的方法改成静态方法，这就是静态工厂模式
+
+```java
+public class SimpleCoffeeFactory {
+
+    public static Coffee createCoffee(String type) {
+        Coffee coffee = null;
+        if("americano".equals(type)) {
+            coffee = new AmericanoCoffee();
+        } else if("latte".equals(type)) {
+            coffee = new LatteCoffee();
+        }
+        return coffe;
+    }
+}
+```
+
+#### 4.2.3
 
 ### 4.4原型模式
 
 ### 4.5建造者模式
+
