设计模式：工厂方法模式实现、优缺点

--- a/doc/设计模式/黑马-设计模式.md
+++ b/doc/设计模式/黑马-设计模式.md
@@ -613,7 +613,104 @@ public class SimpleCoffeeFactory {
 }
 ```
 
-#### 4.2.3
+#### 4.2.3 工厂方法模式
+
+上面的简单工厂模式的工厂类并没有遵循开闭原则，使用工厂方法模式就可以完全遵循开闭原则
+
+##### 4.2.3.1 概念
+
+##### 4.2.3.1 结构
+
+1. 抽象工厂
+
+   提供创建产品的接口，调用者通过它访问具体工厂的方法来创建产品
+
+2. 具体工厂
+
+   实现抽象工厂的抽象方法，完成具体产品的创建
+
+3. 抽象产品
+
+   定义产品的规范，描述了产品的主要特性和功能
+
+4. 具体产品
+
+   实现了抽象产品定义的接口，由具体工厂来创建，它和具体工厂之间一一对象
+
+##### 4.2.3.1 实现
+
+![工厂方法模式](https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/工厂方法模式.5yd181af16w0.png)
+
+**抽象工厂**
+
+```java
+public interface CoffeeFactory {
+    /**
+     * @return 生产咖啡的抽象方法
+     */
+    Coffee createCoffee();
+}
+```
+
+拿铁咖啡工厂
+
+```java
+public class LatteCoffeeFactory implements CoffeeFactory{
+    @Override
+    public Coffee createCoffee() {
+        return new LatteCoffee();
+    }
+}
+```
+
+美式咖啡工厂
+
+```java
+public class AmericanCoffeeFactory implements CoffeeFactory{
+    @Override
+    public Coffee createCoffee() {
+        return new AmericanCoffee();
+    }
+}
+```
+
+咖啡店类
+
+```java
+public class CoffeeStore {
+
+    private CoffeeFactory coffeeFactory;
+
+    public CoffeeStore(CoffeeFactory coffeeFactory) {
+        this.coffeeFactory = coffeeFactory;
+    }
+
+    public Coffee orderCoffee() {
+        Coffee coffee = coffeeFactory.createCoffee();
+        coffee.addMilk();
+        coffee.addSugar();
+        return coffee;
+    }
+}
+```
+
+##### 4.2.3.1 优缺点
+
+工厂方法模式实际上是简单工程模式的抽象
+
+1. 优点
+
+   用户只需要具体的工厂名称就可得到所要的产品，无需知道产品的具体创建过程
+
+   在系统中如果需要添加新的产品，只需要添加具体的产品类和对应的具体工厂类即可，无需对原工厂进行任何修改，满足开闭原则
+
+2. 缺点
+
+   每增加一个新的产品就需要增加一个具体的产品类和具体的工厂类，增加了系统的复杂度
+
+#### 4.2.4 抽象工厂模式
+
+
 
 ### 4.4原型模式
 
