设计模式：工厂模式扩展（静态工厂模式 + 配置文件方式实现工厂对象和产品对象的解耦）

--- a/doc/设计模式/黑马-设计模式.md
+++ b/doc/设计模式/黑马-设计模式.md
@@ -710,7 +710,66 @@ public class CoffeeStore {
 
 #### 4.2.4 抽象工厂模式
 
+#### 4.2.5 模式扩展
 
+##### 简单工厂模式 + 配置文件方式解除耦合
+
+可以通过简单工厂模式 + 配置文件方式实现工厂对象和产品对象的解耦。在工厂类中加载配置文件的全限定类名，并且对创建的对象进行存储，客户端如果需要使用，直接传对象名称即可。
+
+1. 配置文件
+
+   ```properties
+   american=com.geek.pattern.factory.config_factory.AmericanCoffee
+   latte=com.geek.pattern.factory.config_factory.LatteCoffee
+   ```
+
+2. 工厂类
+
+   ```java
+   public class CoffeeFactory {
+   
+       /**
+        * 对象存储容器
+        */
+       private static Map<String, Coffee> containerMap = new HashMap<>();
+   
+       /**
+        * 加载配置文件，由于需要在类加载时只加载一次，所以在静态代码块中实现
+        */
+       static {
+           Properties properties = new Properties();
+           InputStream inputStream = CoffeeFactory.class.getClassLoader().getResourceAsStream("bean.properties");
+           try {
+               properties.load(inputStream);
+   
+               //从properties集合中获取全类名，并且创建对象
+               for (Object key : properties.keySet()) {
+                   String className = properties.getProperty((String) key);
+                   // 通过反射技术创建对象
+                   Class<?> clazz = Class.forName(className);
+                   // 调用无参构造方法，创建类实例
+                   Coffee coffee = (Coffee) clazz.newInstance();
+                   // 将对象存储到容器中
+                   containerMap.put((String) key, coffee);
+               }
+           } catch (IOException | ClassNotFoundException | IllegalAccessException | InstantiationException e) {
+               e.printStackTrace();
+           }
+   
+       }
+   
+       /**
+        * 静态方法，通过产品名称获取产品对象
+        * @param name
+        * @return
+        */
+       public static Coffee createCoffee(String name) {
+          return containerMap.get(name);
+       }
+   }
+   ```
+
+静态成员变量用来存储创建的对象（键存储的是名称，值存储的是对应的对象），而读取配置文件以及创建对象写在静态代码块中，目的就是只需要执行一次
 
 ### 4.4原型模式
 
