设计模式: 原型模式

--- a/doc/设计模式/黑马-设计模式.md
+++ b/doc/设计模式/黑马-设计模式.md
@@ -773,5 +773,88 @@ public class CoffeeStore {
 
 ### 4.4原型模式
 
-### 4.5建造者模式
+#### 4.4.1 思想
 
+用一个已经创建的实例作为原型，通过复制原型对象来创建一个和原对象一样的对象。
+
+#### 4.4.2 类结构
+
+1. 抽象原型类
+
+   规定了抽象`clone方法`
+
+2. 具体原型类
+
+   实现了抽象原型类`clone方法`，表示该对象是可以复制的
+
+#### 4.4.3 实现
+
+原型模式分为浅拷贝和深拷贝
+
+1. 浅拷贝
+
+   创建一个新对象，新对象的属性和原对象的属性完全相同，并且对于非基本数据类型属性仍然执行原对象属性的地址
+
+2. 深拷贝
+
+   创建一个新对象，属性中引用的其他对象都会被克隆， 不再引用原对象内存地址
+
+Object类中提供的`clone方法`可以实现`浅克隆`。Cloneable接口是上面类图的抽象原型类，而实现了Cloneable接口的子类是具体原型类
+
+RealizeType**具体原型类**
+
+```java
+public class RealizeType implements Cloneable{
+
+    public RealizeType() {
+        System.out.println("具体原型类被创建...");
+    }
+
+    @Override
+    protected RealizeType clone() throws CloneNotSupportedException {
+        System.out.println("具体原型类对象被克隆...");
+        return (RealizeType) super.clone();
+    }
+}
+```
+
+#### 4.3.4 案例
+
+**用原型模式生成三号学生奖状**
+
+“三号学生”奖状除了获奖人姓名不同，其他的都相同。可以使用原型模式快速复制出多个三好学生奖状
+
+```java
+public class Citation implements Cloneable{
+
+    private String name;
+
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    @Override
+    protected Citation clone() throws CloneNotSupportedException {
+        return (Citation) super.clone();
+    }
+
+    public void show() {
+        System.out.println(name + "同学：在2020学年第一学期中表现优秀，被评为三好学生。特发此状！");
+    }
+}
+```
+
+#### 4.3.5 使用场景
+
+1. 对象的创建非常复杂时，可以使用原型模式快速复制对象
+2. 对性能和安全性比较高时
+
+#### 4.3.6 扩展（深克隆）
+
+
+
+### 4.5建造者模式
