--- a/doc/投资理财/股票入门.md
+++ b/doc/投资理财/股票入门.md
@@ -79,7 +79,7 @@
 
 目前国内A股的交易费用主要由三部分组成：
 
-1. 印花税
+1. 印花税（卖的时候才会收费）
 
    佣金费用为千分之一，卖的时候才收取费用，佣金费用为国家税收，全国统一价
 
@@ -87,9 +87,9 @@
 
    深证证券交易所没有此费用，上海证券交易所的费用为成交金额的0.0002%
 
-3. 交易佣金
+3. 交易佣金（买&卖都会收费）
 
-   最高交易佣金为万3（万分之三），最低收费为5元。各家券商收费不一，开户前需要咨询清楚
+   最高交易佣金为万3（万分之三），最低收费为5元。各家券商收费不一，开户前需要咨询清楚。
 
 #### 看盘软件基本操作
 
