--- a/doc/分布式存储系统.md
+++ b/doc/分布式存储系统.md
@@ -2,8 +2,6 @@
 
 1. spdk
 
-   
-
 2. raft协议
 
 3. paxios协议
@@ -18,6 +16,8 @@
 
 8. NVMe
 
+   
+
 9. PCI总线
 
    PCI即Peripheral Component Interconnect，中文意思是“外围器件互联”，是由PCISIG (PCI Special Interest Group)推出的一种局部并行总线标准
@@ -30,9 +30,21 @@
 
 ### 存储类型区别
 
+这三者的本质差别是使用数据的“用户”不同：块存储的用户是可以读写块设备的软件系统，例如传统的[文件系统](https://www.zhihu.com/search?q=文件系统&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra={"sourceType"%3A"answer"%2C"sourceId"%3A1159036357})、数据库；文件存储的用户是自然人；对象存储的用户则是其它[计算机软件](https://www.zhihu.com/search?q=计算机软件&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra={"sourceType"%3A"answer"%2C"sourceId"%3A1159036357})。
+
 1. 块存储
+
+   
+
 2. 对象存储
+
+   
+
 3. 文件存储
+
+   把存储介质上的数据组织成目录-子目录-文件这种形式的数据结构，用于从这个结构中寻找、添加、修改、删除文件的程序，以及用于维护这个结构的程序，组成的系统有一个专用的名字：**文件系统（File System）**。文件系统有很多，常见的有Windows的FAT/FAT32/NTFS，Linux的EXT2/EXT3/EXT4/XFS/BtrFS等。
+
+   而在网络存储中，底层数据并非存储在本地的存储介质，而是另外一台服务器上，不同的客户端都可以用类似文件系统的方式访问这台服务器上的文件，这样的系统叫**[网络文件系统](https://www.zhihu.com/search?q=网络文件系统&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra={"sourceType"%3A"answer"%2C"sourceId"%3A1159036357})（Network File System）**
 
 ### 开源存储系统区别
 
@@ -89,5 +101,39 @@
 
 横向扩展是指一个集群的服务能力是否可以通过加机器做到线性扩展。
 
+### [NVMe简介](https://zhuanlan.zhihu.com/p/71932170)
 
+NVMe的全称是Non-Volatile Memory Express，如果翻译过来就是**非易失性内存主机控制器接口。规范用于定义硬件接口和传输协议。**
+
+#### 存储概念
+
+##### 尺寸外形
+
+也就是设备的形状和大小，通常存储设备的尺寸外形包括如下
+
+1. 2.5寸或者3.5寸驱动器
+2. M.2 和 PCI Express（PCIe）
+
+##### 接口
+
+通过接口可以实现设备和计算机的通信，常见的存储设备接口如下：
+
+1. SATA接口
+2. PCIe接口
+3. SAS接口、FC接口
+
+##### 协议
+
+协议规定了设备和计算机之间通信规范，常见的协议如下：
+
+1. 用于SATA接的AHCI协议或者ATA协议
+2. 用于PCIe接口的NVMe协议
+
+**通过了解以上存储概念我们知道了NVMe是运行在某种接口上的通信协议，用于规范计算机和存储设备之间的数据传输。**
+
+#### 为什么NVMe会这么快
+
+由于SSD本上的物理特性，其数据访问速度已经相当快了，性能瓶颈出现在计算机与存储设备的接口和协议上。
+
+NVMe协议本质上是建立了多个计算机与存储设备之间的通路，这样传输数据的效率机会快很多。在NVMe协议中，多个通路其实就是多个队列。NVMe协议可以最多有64K个队列，每个CPU或者核心都可以有一个队列，这样并发程度大大提升，性能也自然更高了。
 
