股票：股票基础入门

--- a/doc/投资理财/股票入门.md
+++ b/doc/投资理财/股票入门.md
@@ -171,3 +171,24 @@
 
    根据突发事件选股（医疗器械公司）
 
+## 股票基础入门
+
+### 均线MA
+
+### 三区划分
+
+### 布林线BOLL
+
+### 成交量VOL
+
+### 指标王MACD
+
+### 筹码分布图
+
+### 分时走势图
+
+### 画线分析
+
+### 大盘指数
+
+### 涨停分析
