股票：均线介绍（设计原理、三类划分、两种极端、反抽确定）

--- a/doc/投资理财/股票入门.md
+++ b/doc/投资理财/股票入门.md
@@ -175,6 +175,64 @@
 
 ### 均线MA
 
+#### 设计原理
+
+统计某一段时间内的平均价格
+
+#### 三类划分
+
+1. 短期均线
+   1. 5日均线（周均线）
+   2. 10日均线
+2. 中期均线
+   1. 20日均线（月均线）
+   2. 60日均线（季均线）
+3. 长期均线
+   1. 120日均线（半年均线）
+   2. 250日均线（年均线）
+
+#### 两种极端
+
+1. 金叉
+
+   形成原因：短期均线由下往上超过长期均线
+
+   **信号：买入信号**
+
+2. 死叉
+
+   形成原因：短期均线由上往下超过长期均线
+
+   **信号：卖出信号**。
+
+
+
+**多头排列和空头排列一旦形成， 至少要维持一段时间，不会轻易改变股票走势**
+
+1. 多头排列
+
+   形成条件：由三支以上均线构成，其中短期均线依次由下往上穿过中期均线、长期均线
+
+   信号：大涨信号
+
+   <img src="https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.4z0hgva68j00.webp" alt="image" style="zoom:67%;" />
+
+2. 空头排列
+
+   形成条件：由三支以上均线构成，其中短期均线依次由上往下穿过中期均线、长期均线
+
+   **信号：暴跌信号（保持警惕）**
+
+   <img src="C:\Users\lucas.zhao\AppData\Roaming\Typora\typora-user-images\image-20220107212256678.png" alt="image-20220107212256678" style="zoom:67%;" />
+
+#### 反抽确定
+
+重要均线跌破或者突破后，必有反抽确定。
+
+**跌破后，K线会有均线的压力；突破后，K线会有均线的支撑力。**
+
+<img src="https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.58shsak14jo0.webp" alt="image" style="zoom:67%;" />
+
 ### 三区划分
 
 ### 布林线BOLL
