股票：均线三区划分

--- a/doc/投资理财/股票入门.md
+++ b/doc/投资理财/股票入门.md
@@ -1,4 +1,4 @@
-## 股票入门基础知识
+## [股票入门基础知识](https://www.bilibili.com/video/BV1sb4y197Fp?from=search&seid=5583612205733891712&spm_id_from=333.337.0.0)
 
 #### 炒股工具
 
@@ -171,9 +171,11 @@
 
    根据突发事件选股（医疗器械公司）
 
-## 股票基础入门
+## [股票基础入门](https://study.163.com/course/introduction.htm?courseId=1004528018#/courseDetail?tab=1)
 
 ### 均线MA
+
+均线是应用最广泛的基础指标，很多指标都是以均线为基础计算而来的。
 
 #### 设计原理
 
@@ -234,6 +236,20 @@
 <img src="https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.58shsak14jo0.webp" alt="image" style="zoom:67%;" />
 
 ### 三区划分
+
+#### 原理讲解
+
+我们是根据120日均线和250日均线的交叉点划分三区的。该交叉点也称之为牛熊点，金叉是牛市的开始点，死叉是熊市的开始点。
+
+<img src="https://cdn.jsdelivr.net/gh/Andre235/-community@master/src/image.439ezxiyj000.webp" alt="image" style="zoom:67%;" />
+
+三区划分：
+
+1区：交叉点的上方（上涨类型）
+
+0区：交叉点之间（转折类型）
+
+-1区：交叉点下方（下跌类型）
 
 ### 布林线BOLL
 
